tests/baselines/reference/interfaceWithMultipleBaseTypes2.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts(17,11): error TS2430: Interface 'Derived2' incorrectly extends interface 'Base'.
  Types of property 'x' are incompatible.
    Type '{ a: number; b: string; }' is not assignable to type '{ a?: string; b: string; }'.
      Types of property 'a' are incompatible.
        Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts (1 errors) ====
    interface Base {
        x: {
            a?: string; b: string;
        }
    }
    
    interface Base2 {
        x: {
            b: string; c?: number;
        }
    }
    
    interface Derived extends Base, Base2 {
        x: { b: string }
    }
    
    interface Derived2 extends Base, Base2 { // error
              ~~~~~~~~
!!! error TS2430: Interface '{|Derived2|0|}' incorrectly extends interface '{|Base|1|}'.
!!! error TS2430:   Types of property 'x' are incompatible.
!!! error TS2430:     Type '{ {|a|2|}: number; {|b|3|}: string; }' is not assignable to type '{ {|a|4|}?: string; {|b|5|}: string; }'.
!!! error TS2430:       Types of property 'a' are incompatible.
!!! error TS2430:         Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts:17:11
!!! annotated symbol 1 tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts:1:11
!!! annotated symbol 2 tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts:18:10
!!! annotated symbol 3 tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts:18:21
!!! annotated symbol 4 tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts:3:9
!!! annotated symbol 5 tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts:3:21
        x: { a: number; b: string }
    }
    
    interface Derived3 extends Base, Base2 {
        x: { a: string; b: string }
    }
    
    